<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Widget Coordinator + child elements go here -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height_kitkat"
            android:background="?colorPrimary"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height_lolipop"
            android:background="?colorPrimaryDark"/>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_height">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme" />
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000">
            <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_white_1000">


                    <com.rey.material.widget.EditText
                        android:layout_marginTop="15dp"
                        android:id="@+id/txtPhotoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/normal_margin"
                        android:layout_marginLeft="@dimen/normal_margin_x3"
                        android:layout_marginRight="@dimen/normal_margin_x3"
                        android:inputType="text"
                        android:hint="@string/name_foto"
                        style="@style/LightEditText"/>


                    <com.rey.material.widget.EditText
                        android:id="@+id/txtDirectoryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginBottom="@dimen/normal_margin"
                        android:layout_marginLeft="@dimen/normal_margin_x3"
                        android:layout_marginRight="@dimen/normal_margin_x3"
                        android:inputType="text"
                        android:hint="@string/name_directory"
                        style="@style/LightEditText"/>


                    <com.rey.material.widget.EditText
                        android:id="@+id/txtTitleSelectPictureName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginBottom="@dimen/normal_margin"
                        android:layout_marginLeft="@dimen/normal_margin_x3"
                        android:layout_marginRight="@dimen/normal_margin_x3"
                        android:inputType="text"
                        android:hint="@string/shared_title_popup"
                        style="@style/LightEditText"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_weight="10"
                            android:layout_marginBottom="@dimen/normal_margin"
                            android:layout_marginLeft="@dimen/normal_margin_x2"
                            >
                            <TextView
                                android:layout_width="0dp"
                                android:layout_weight="4"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/normal_margin"
                                android:gravity="left|bottom"
                                android:layout_gravity="left|bottom"
                                android:text="@string/shared_quality_photo"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <com.rey.material.widget.Slider
                                android:id="@+id/sliderQuality"
                                style="@style/Material.Widget.Slider"
                                android:layout_width="0dp"
                                android:layout_weight="6"
                                android:layout_height="wrap_content"
                                android:paddingRight="@dimen/normal_margin_x3"
                                android:paddingLeft="@dimen/normal_margin"
                                android:gravity="right"
                                android:layout_gravity="right"
                                app:sl_minValue="1"
                                app:sl_maxValue="100"
                                app:sl_discreteMode = "true"
                                app:sl_stepValue = "1"/>

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/normal_margin"
                            android:layout_marginBottom="@dimen/normal_margin"
                            android:layout_marginLeft="@dimen/normal_margin_x3"
                            android:layout_marginRight="@dimen/normal_margin_x3">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_weight="3"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:layout_gravity="center"
                                    android:text="@string/shared_type_extension"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="12sp"
                                    android:textStyle="bold"
                                    />

                                <RadioGroup
                                    android:id="@+id/radioTypeExtension"
                                    android:layout_width="0dp"
                                    android:layout_weight="7"
                                    android:layout_height="wrap_content"
                                    android:gravity="left"
                                    android:orientation="horizontal">

                                    <RadioButton
                                        android:id="@+id/radioExtensionJPEG"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginRight="16dp"
                                        android:checked="false"
                                        android:text="@string/shared_preference_extension_jpg"
                                        android:textSize="12sp"/>

                                    <RadioButton
                                        android:layout_marginLeft="10dp"
                                        android:id="@+id/radioExtensionPNG"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:checked="false"
                                        android:text="@string/shared_preference_extension_png"
                                        android:textSize="12sp"/>

                                </RadioGroup>

                        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:layout_marginLeft="@dimen/normal_margin_x3"
                android:layout_marginRight="@dimen/normal_margin_x3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_gravity="left"
                    android:text="@string/shared_autoincrement"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    />

                <Switch
                    android:id="@+id/switchAutoIncrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="right"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    </LinearLayout>

</RelativeLayout>

