<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/annonce.main.coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"

    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/flexible.example.appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/flexible.example.collapsing"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:layout_marginLeft="-10dp"
            app:contentScrim="?colorPrimary"
            app:expandedTitleMarginBottom="100dp"
            app:expandedTitleTextAppearance="@style/CollapsingTextAppearance.Inverse"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/backroundpersonal"
                android:tint="@color/md_red_500_50" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="65dp"
                android:elevation="8dp"
                android:src="@drawable/users"
                app:border_color="#FFF"
                app:border_width="2dp"

                app:layout_anchorGravity="top|center_horizontal"
                app:layout_scrollFlags="scroll"

                />

            <android.support.v7.widget.Toolbar
            android:id="@+id/flexible.example.toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:fillViewport="true"
        android:layout_gravity="fill_vertical"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:id="@+id/flexible.example.cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPaddingBottom="80dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:cardCornerRadius="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="4dp"
                android:layout_margin="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"

                    >

                    <TextView
                        android:textAlignment="center"
                        style="@style/Base.TextAppearance.AppCompat.Body2"
                        android:textSize="@dimen/size_level5"
                        android:layout_width="match_parent"
                        android:text="@string/login"
                        android:layout_height="wrap_content" />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:drawableLeft="@drawable/ic_person"
                            android:drawableTint="@color/colorBlack"
                            android:singleLine="true"
                            android:hint="Email"
                            android:id="@+id/user"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:singleLine="true"
                            android:drawableLeft="@drawable/ic_action_lock_closed"
                            android:drawableTint="@color/colorBlack"
                            android:hint="Password"
                            android:id="@+id/password"
                            android:inputType="textPassword" />
                        <Button
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="22dp"
                            android:background="@color/secondary_text"
                            android:text="@string/sign_in"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:id="@+id/button_login"
                            android:textSize="18sp" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>